# asila

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  aasila.sh  alembic.tenant.ini  asila.sh  compare_search.py  docker-compose.yml  postgres.Dockerfile  pyproject.toml  run_security_checks.py  test_doc.md  test_ingestion.py  test_insert.py  test_mcp.py  test_script.py  test_script2.py  test_search.py  test_session.py  used_routes.txt
backend/: .env.example  Dockerfile  alembic.app.ini  alembic.platform.ini  alembic.shared.ini  alembic.tenant.ini  defined_env.txt  openapi.json  pyproject.toml  test_insert.py  test_mcp_client.py  test_pipeline.py  test_search.py  test_session.py  undocumented_used_env.txt  unused_defined_env.txt  used_env.txt  vulture_results.txt  welcome.md.bak  whitelist.py
backend/api/: main.py
backend/api/routes/: analytics.py  api_keys.py  auth.py  chat.py  conversations.py  conversations_core.py  documents.py  knowledge.py  mcp.py  mcp_core.py  organizations_core.py  provider_credentials.py  service_accounts.py  setup.py  tasks.py  tenants.py  users.py
backend/cli/: main.py
backend/core/: background.py  queue.py
backend/core/config/: settings.py
backend/core/database/: app_session.py  base.py  platform_session.py  redis_client.py  tenant_session.py
backend/core/exceptions/: handlers.py
backend/core/logging/: config.py
backend/core/organization/: __init__.py  context.py
backend/core/security/: audit.py  auth.py  dependencies.py  oidc.py  principals.py  secret_box.py
backend/core/tenant/: context.py  resolver.py
backend/domain/ports/: ai.py
backend/infra/ai/: gemini.py  local.py  openai_compatible.py
backend/infra/llm/: gemini.py
backend/infra/storage/: local.py
backend/migrations/app/: README  env.py
backend/migrations/platform/: env.py
backend/migrations/tenant/: env.py
backend/scratch/: ingest_sample.py  test_malformed_query.py  test_query.py  test_unsupported_file.py  test_worker_simulation.py
backend/scripts/: bootstrap_tenant.py  debug_ingest.py  ingest.py  list_models.py
backend/services/ai/: factory.py
backend/services/api_keys/: service.py
backend/services/audit/: service.py
backend/services/conversations/: service.py
backend/services/documents/: service.py
backend/services/embeddings/: core.py
backend/services/generation/: service.py
backend/tests/: test_ai_providers.py  test_api_contract.py  test_api_key_routes.py  test_api_key_service.py  test_app_session.py  test_audit_schema.py  test_audit_service.py  test_cli.py  test_cli_requests.py  test_conversation_migration_contract.py  test_conversation_schema.py  test_conversation_service.py  test_core_schema.py  test_deployment_contract.py  test_document_ingestion.py  test_document_service.py  test_durable_ingestion_migration_contract.py  test_embedding_service.py  test_ingestion_api.py  test_ingestion_job_service.py  test_isolation_concurrency.py  test_mcp_core.py  test_membership_service.py  test_migration_revision_ids.py  test_oidc.py  test_openai_compatible_provider.py  test_organization_aware_relationships.py  test_organization_context.py  test_organization_service.py  test_platform_migration_contract.py  test_principals.py  test_provider_credentials.py  test_provider_factory.py  test_retrieval_deletion_contract.py  test_retrieval_service.py  test_rls_migration_contract.py  test_secret_box.py  test_service_account_auth.py  test_setup_service.py  test_storage_security.py  (+6 more)
backend/workers/: core.py  main.py
(+225 files in other folders)
