[project]
name = "asila"
version = "0.1.0"
description = "Open-source, self-hostable knowledge infrastructure for AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "alembic>=1.13.1",
    "redis[hiredis]>=5.0.1",
    "pgvector>=0.2.5",
    "google-genai>=1.0.0",
    "arq>=0.27.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "hvac>=2.4.0",
    "email-validator>=2.1.0",
    "mcp>=1.28.1",
    "asgi-lifespan>=2.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "sseclient-py>=1.9.0",
]
